scroll bars fixed
added horizontal scrolls and padding to bottom of pagination panel

--- a/public/css/addon.css
+++ b/public/css/addon.css
@@ -1,9 +1,7 @@
 /* add-on styles */
 .aui-page-hybrid {
-	position: relative;
-	height: auto;
-	min-height: 100% !important;
-	overflow: hidden;
+	overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 #no_fix_versions {
@@ -79,7 +77,7 @@
 	width: auto;
 	color: #3B73AF;
 	text-align: center;
-	padding: 5px 0px 5px 0px; /* top right bottom left */
+	padding: 5px 0px 20px 0px; /* top right bottom left */
 }
 
 #pagination * {
